- Added content block .last class for some quick n dirty fixing - Updated underline link hover style - Moved bird svg icon inside location area - Bird positioned on above location on mobile, to the left on desktop

--- a/assets/styles/components/_content-box.scss
+++ b/assets/styles/components/_content-box.scss
@@ -5,7 +5,7 @@
   a:not(.icon-link) {
     color: $gray-3;
     display: inline-block;
-    padding: 6px 6px 0;
+    padding: 6px 0 0;
     position: relative;
     text-decoration: none;
     transition: $transition-default;
@@ -25,6 +25,8 @@
 
     &:hover {
       color: #fff;
+      padding-left: 6px;
+      padding-right: 6px;
       z-index: 1;
 
       &:after {
@@ -52,6 +54,10 @@
 
   .content-block {
     margin-bottom: $space-medium;
+
+    &.last {
+      margin-bottom: 0;
+    }
   }
 
   @include min-screen($screen-medium-min) {
@@ -69,9 +75,5 @@
     .content-block {
       margin-bottom: $space-extra-large;
     }
-  }
-
-  .content-block:last-child {
-    margin-bottom: 0;
   }
 }
