--- a/assets/styles/layouts/_contact-location.scss
+++ b/assets/styles/layouts/_contact-location.scss
@@ -65,7 +65,14 @@
   }
 
   .bird {
-    display: none;
+    display: block;
+    left: 50%;
+    margin-left: -35px;
+    margin-top: -30px;
+    position: absolute;
+    top: 0;
+    z-index: 1;
+    height: 60px;
   }
 
   @include min-screen($screen-medium-min) {
@@ -80,11 +87,13 @@
 
     .bird {
       display: block;
-      position: absolute;
-      top: 50%;
-      left: 50%;
+      height: auto;
+      left: 0;
       margin-left: -142px;
       margin-top: -120px;
+      position: absolute;
+      top: 50%;
+      z-index: 1;
     }
   }
 }
